# fancy-pomodoros

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-22-fancy-pomodoro-cli.md
docs/superpowers/specs/: 2026-05-22-fancy-pomodoro-cli-design.md
pomo/: __init__.py  __main__.py  cli.py  config.py  keyboard.py  models.py  ratings.py  stats.py  storage.py  timer.py
pomo/ui/: __init__.py  countdown.py  format.py  prompts.py  report.py  theme.py
tests/: test_cli_report.py  test_config.py  test_countdown.py  test_format.py  test_keyboard.py  test_models.py  test_prompts.py  test_ratings.py  test_report.py  test_stats.py  test_storage.py  test_timer.py
